@@ -15,6 +15,7 @@ import com.powsybl.openloadflow.network.LfBus;
 import com.powsybl.openloadflow.network.LfElement;
 import com.powsybl.openloadflow.network.LfNetwork;
 import com.powsybl.openloadflow.network.util.VoltageInitializer;
+import com.powsybl.openloadflow.util.PerUnit;
 import com.powsybl.openloadflow.util.Reports;
 import org.apache.commons.lang3.mutable.MutableInt;
 import org.apache.commons.lang3.tuple.Pair;
@@ -58,7 +59,7 @@ public class NewtonRaphson extends AbstractAcSolver {
                 .filter(e -> Math.abs(e.getValue()) > Math.pow(10, -7))
                 .sorted(Comparator.comparingDouble((Map.Entry<Equation<AcVariableType, AcEquationType>, Double> e) -> Math.abs(e.getValue())).reversed())
                 .limit(count)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public static Map<AcEquationType, Pair<Equation<AcVariableType, AcEquationType>, Double>> getLargestMismatchByAcEquationType(EquationSystem<AcVariableType, AcEquationType> equationSystem, double[] mismatch) {
@@ -67,12 +68,10 @@ public class NewtonRaphson extends AbstractAcSolver {
                 .collect(Collectors.toMap(e -> e.getKey().getType(), Function.identity(), BinaryOperator.maxBy(Comparator.comparingDouble(e -> Math.abs(e.getValue())))));
     }
 
-    public void reportAndLogLargestMismatchByAcEquationType(Reporter reporter, EquationSystem<AcVariableType, AcEquationType> equationSystem, double[] mismatch, double norm, int iteration) {
+    public void reportAndLogLargestMismatchByAcEquationType(Reporter reporter, EquationSystem<AcVariableType, AcEquationType> equationSystem, double[] mismatch) {
         Map<AcEquationType, Pair<Equation<AcVariableType, AcEquationType>, Double>> mismatchEquations = getLargestMismatchByAcEquationType(equationSystem, mismatch);
 
         // report largest mismatches in (P, Q, V) equations
-        Reporter iterationMismatchReporter = detailedReport ? Reports.createNewtonRaphsonMismatchReporter(reporter, iteration) : null;
-
         for (AcEquationType acEquationType : REPORTED_AC_EQUATION_TYPES) {
             Optional.ofNullable(mismatchEquations.get(acEquationType))
                     .ifPresent(equationPair -> {
@@ -84,23 +83,30 @@ public class NewtonRaphson extends AbstractAcSolver {
                         int busPhiRow = equationSystem.getVariable(elementNum, AcVariableType.BUS_PHI).getRow();
                         double busV = equationSystem.getStateVector().get(busVRow);
                         double busPhi = equationSystem.getStateVector().get(busPhiRow);
-                        LOGGER.trace("Mismatch `{}` for {}: {} (element={}) || Bus V /_ PHI = {} /_ {}", acEquationType, equation, equationMismatch, elementId, busV, busPhi);
-                        if (iterationMismatchReporter != null) {
-                            Reports.reportNewtonRaphsonMismatch(iterationMismatchReporter, getEquationTypeDescription(acEquationType), equationMismatch, elementId, busV, busPhi, iteration);
+                        LfBus bus = network.getBus(elementNum);
+                        double busNominalV = bus.getNominalV();
+                        double busSumP = bus.getP().eval() * PerUnit.SB;
+                        double busSumQ = bus.getQ().eval() * PerUnit.SB;
+
+                        if (LOGGER.isTraceEnabled()) {
+                            LOGGER.trace("Largest mismatch on {}: {}", getEquationTypeDescription(acEquationType), equationMismatch);
+                            LOGGER.trace("    Bus Id: {} (nominalVoltage={})", elementId, busNominalV);
+                            LOGGER.trace("    Bus  V: {} pu, {} rad", busV, busPhi);
+                        }
+
+                        if (reporter != null) {
+                            Reports.BusReport busReport = new Reports.BusReport(elementId, equationMismatch, busNominalV, busV, busPhi, busSumP, busSumQ);
+                            Reports.reportNewtonRaphsonLargestMismatches(reporter, getEquationTypeDescription(acEquationType), busReport);
                         }
                     });
-        }
-
-        if (iterationMismatchReporter != null) {
-            Reports.reportNewtonRaphsonNorm(iterationMismatchReporter, norm, iteration);
         }
     }
 
     private String getEquationTypeDescription(AcEquationType acEquationType) {
         return switch (acEquationType) {
-            case BUS_TARGET_P -> "TargetP";
-            case BUS_TARGET_Q -> "TargetQ";
-            case BUS_TARGET_V -> "TargetV";
+            case BUS_TARGET_P -> "P";
+            case BUS_TARGET_Q -> "Q";
+            case BUS_TARGET_V -> "V";
             default -> null; // not implemented for other ac equation types
         };
     }
@@ -109,21 +115,26 @@ public class NewtonRaphson extends AbstractAcSolver {
         LOGGER.debug("Start iteration {}", iterations);
 
         try {
+            // create iteration reporter
+            // - add 1 to iteration so that it starts at 1 instead of 0
+            Reporter iterationReporter = detailedReport ? Reports.createNewtonRaphsonMismatchReporter(reporter, iterations.getValue() + 1) : null;
+
             // solve f(x) = j * dx
             try {
                 j.solveTransposed(equationVector.getArray());
             } catch (MatrixException e) {
                 LOGGER.error(e.toString(), e);
+                Reports.reportNewtonRaphsonError(reporter, e.toString());
                 return AcSolverStatus.SOLVER_FAILED;
             }
             // f(x) now contains dx
 
-            svScaling.apply(equationVector.getArray(), equationSystem);
+            svScaling.apply(equationVector.getArray(), equationSystem, iterationReporter);
 
             // update x and f(x) will be automatically updated
             equationSystem.getStateVector().minus(equationVector.getArray());
 
-            // substract targets from f(x)
+            // subtract targets from f(x)
             equationVector.minus(targetVector);
             // f(x) now contains equation mismatches
 
@@ -136,18 +147,20 @@ public class NewtonRaphson extends AbstractAcSolver {
                         });
             }
 
-            // test stopping criteria and log norm(fx)
+            // test stopping criteria
             NewtonRaphsonStoppingCriteria.TestResult testResult = parameters.getStoppingCriteria().test(equationVector.getArray(), equationSystem);
 
             testResult = svScaling.applyAfter(equationSystem, equationVector, targetVector,
-                                              parameters.getStoppingCriteria(), testResult);
+                                              parameters.getStoppingCriteria(), testResult,
+                                              iterationReporter);
 
             LOGGER.debug("|f(x)|={}", testResult.getNorm());
-
-            if (detailedReport || LOGGER.isTraceEnabled()) {
-                reportAndLogLargestMismatchByAcEquationType(reporter, equationSystem, equationVector.getArray(), testResult.getNorm(), iterations.getValue());
+            if (detailedReport) {
+                Reports.reportNewtonRaphsonNorm(iterationReporter, testResult.getNorm());
             }
-
+            if (detailedReport || LOGGER.isTraceEnabled()) {
+                reportAndLogLargestMismatchByAcEquationType(iterationReporter, equationSystem, equationVector.getArray());
+            }
             if (testResult.isStop()) {
                 return AcSolverStatus.CONVERGED;
             }
@@ -177,7 +190,7 @@ public class NewtonRaphson extends AbstractAcSolver {
             LOGGER.error("{} buses have a voltage magnitude out of range [{}, {}]: {}",
                     busesOutOfNormalVoltageRange.size(), parameters.getMinRealisticVoltage(), parameters.getMaxRealisticVoltage(), busesOutOfNormalVoltageRange);
 
-            Reports.reportNewtonRaphsonBusesOutOfNormalVoltageRange(reporter, busesOutOfNormalVoltageRange, parameters.getMinRealisticVoltage(), parameters.getMaxRealisticVoltage());
+            Reports.reportNewtonRaphsonBusesOutOfRealisticVoltageRange(reporter, busesOutOfNormalVoltageRange, parameters.getMinRealisticVoltage(), parameters.getMaxRealisticVoltage());
         }
         return !busesOutOfNormalVoltageRange.isEmpty();
     }
@@ -194,8 +207,12 @@ public class NewtonRaphson extends AbstractAcSolver {
 
         LOGGER.debug("|f(x0)|={}", initialTestResult.getNorm());
 
+        Reporter initialReporter = detailedReport ? Reports.createNewtonRaphsonMismatchReporter(reporter, 0) : null;
+        if (detailedReport) {
+            Reports.reportNewtonRaphsonNorm(initialReporter, initialTestResult.getNorm());
+        }
         if (detailedReport || LOGGER.isTraceEnabled()) {
-            reportAndLogLargestMismatchByAcEquationType(reporter, equationSystem, equationVector.getArray(), initialTestResult.getNorm(), -1);
+            reportAndLogLargestMismatchByAcEquationType(initialReporter, equationSystem, equationVector.getArray());
         }
 
         // start iterations
